--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div> -->
         <div class="row">
-            <div class="col l5 offset-l1 m5 s5">
+            <div class="col l5 m5 s5">
                 <div class="container">
                     <div class="row">
                         <h3><span class="playerOne">Player 1: Enter Name</span></h3>
@@ -88,13 +88,32 @@
                         </button>
                     </div>
                     <div class="row" id="playerOneButtons">
-                        <button class="waves-effect waves-light grey playerOneBtn dark-1 btn-large" value="R"><i class="material-icons left">volume_up</i>Rock</button>
-                        <button class="waves-effect waves-light grey playerOneBtn dark-1 btn-large" value="P"><i class="material-icons left">message</i>Paper</button>
-                        <button class="waves-effect waves-light grey playerOneBtn dark-1 btn-large" value="S"><i class="material-icons left">content_cut</i>Scissors</button>
+                        <button class="waves-effect waves-light grey playerOneBtn playerOneBtnR rockOne dark-1 btn-large" value="R"><i class="material-icons left">volume_up</i>Rock</button>
+                        <button class="waves-effect waves-light grey playerOneBtn playerOneBtnP paperOne dark-1 btn-large" value="P"><i class="material-icons left">message</i>Paper</button>
+                        <button class="waves-effect waves-light grey playerOneBtn playerOneBtnS scissorsOne dark-1 btn-large" value="S"><i class="material-icons left">content_cut</i>Scissors</button>
+
+                    </div>
+                    <div class="row" id="playerOneLogoutRow">
+                            <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
+                                    <button id="playerOneLogoutButton" class="waves-effect waves-light grey dark-1 logout btn-small">Logout</button>
+                            </div>
                     </div>
                 </div>
             </div>
-            <div class="col l5 ofset-l1 m5 s5">
+            <div class="col s2 m2 l2">
+                    <div class="card grey darken-1">
+                      <div class="card-content white-text">
+                        <span class="card-title center">RESULTS</span>
+                        <span class="tieGame center"></span>
+                        <span class="oneWins center"></span>
+                        <span class="oneLosses center"></span>
+                        <span class="twoWins center"></span>
+                        <span class="twoLosses center"></span>
+
+                      </div>
+                    </div>
+                  </div>
+            <div class="col l5 m5 s5">
                 <div class="container">
                     <div class="row">
                         <h3><span class="playerTwo">Player 2: Enter Name</span></h3>
@@ -112,9 +131,14 @@
                         </button>
                     </div>
                     <div class="row" id="playerTwoButtons">
-                        <a class="waves-effect waves-light grey playerTwoBtn dark-1 btn-large" value="R"><i class="material-icons left">volume_up</i>Rock</a>
-                        <a class="waves-effect waves-light grey playerTwoBtn dark-1 btn-large" value="P"><i class="material-icons left">message</i>Paper</a>
-                        <a class="waves-effect waves-light grey playerTwoBtn dark-1 btn-large" value="S"><i class="material-icons left">content_cut</i>Scissors</a>
+                        <button class="waves-effect waves-light grey playerTwoBtn playerTwoBtnR dark-1 btn-large" value="R"><i class="material-icons left">volume_up</i>Rock</button>
+                        <button class="waves-effect waves-light grey playerTwoBtn playerTwoBtnP dark-1 btn-large" value="P"><i class="material-icons left">message</i>Paper</button>
+                        <button class="waves-effect waves-light grey playerTwoBtn playerTwoBtnS dark-1 btn-large" value="S"><i class="material-icons left">content_cut</i>Scissors</button>
+                    </div>
+                    <div class="row" id="playerTwoLogoutRow">
+                            <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
+                                    <button id="playerTwoLogoutButton" class="waves-effect waves-light grey dark-1 logout btn-small">Logout</button>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -134,6 +158,10 @@
                     </div>
                 </div>
             </div>
+            <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
+                <button class="waves-effect waves-light grey dark-1 logout btn-large">Logout</button>
+            </div>
+
         </div>
 
 
