login logout fully functional - RPS fully functional

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="col l5 m5 s5">
                 <div class="container">
                     <div class="row">
-                        <h3><span class="playerOne">Player 1: Enter Name</span></h3>
+                        <h3><span class="playerOne center">Player 1: Enter Name</span></h3>
                     </div>
                     <div class="row" id="playerOneInfo">
                         <form class="col l12 m12 s12">
@@ -116,7 +116,7 @@
             <div class="col l5 m5 s5">
                 <div class="container">
                     <div class="row">
-                        <h3><span class="playerTwo">Player 2: Enter Name</span></h3>
+                        <h3><span class="playerTwo center">Player 2: Enter Name</span></h3>
                     </div>
                     <div class="row" id="playerTwoInfo">
                         <form class="col s12">
@@ -157,9 +157,6 @@
                                 </div>
                     </div>
                 </div>
-            </div>
-            <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
-                <button class="waves-effect waves-light grey dark-1 logout btn-large">Logout</button>
             </div>
 
         </div>
