RPS fully functional

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                     <div class="card grey darken-1">
                       <div class="card-content white-text">
                         <span class="card-title center">RESULTS</span>
-                        <span class="tieGame center"></span>
-                        <span class="oneWins center"></span>
-                        <span class="oneLosses center"></span>
-                        <span class="twoWins center"></span>
-                        <span class="twoLosses center"></span>
+                        <span class="tieGame center"></span><br>
+                        <span class="oneWins center"></span><br>
+                        <span class="oneLosses center"></span><br>
+                        <span class="twoWins center"></span><br>
+                        <span class="twoLosses center"></span><br>
 
                       </div>
                     </div>
