--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
                         <span class="chat-text">Chat box</span>
                         <div class="fullChatText"></div>
                     </div>
+                    <div class="messages-box">
+                        <ul>
+
+                        </ul>
+                    </div>
                     <div class="card-action">
                         <div class="input-field col s6 m6 l6">
                             <input placeholder="Enter Thy Taunt Here" id="message-input" type="text" class="validate">
