--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
                     </div>
                     <div class="row" id="playerOneLogoutRow">
-                        <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
+                        <!-- <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
                             <button id="playerOneLogoutButton" class="waves-effect waves-light grey dark-1 logout btn-small">Logout</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -107,12 +107,13 @@
                 <div class="card grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title center">RESULTS</span>
+                        <span id="playerTurn" class="card-title center">Player Turn:</span>
                         <span class="tieGame center"></span><br>
                         <span class="oneWins center"></span><br>
                         <span class="oneLosses center"></span><br>
                         <span class="twoWins center"></span><br>
                         <span class="twoLosses center"></span><br>
-
+                        
                     </div>
                 </div>
             </div>
@@ -142,9 +143,9 @@
                                 class="material-icons left">content_cut</i>Scissors</button>
                     </div>
                     <div class="row" id="playerTwoLogoutRow">
-                        <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
+                        <!-- <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
                             <button id="playerTwoLogoutButton" class="waves-effect waves-light grey dark-1 logout btn-small">Logout</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -154,20 +155,17 @@
             <div class="col s6 offset-s3 m6 offset-m3 l6 offset-l3">
                 <div class="card white pd20">
                     <div class="card-content">
-                        <span class="chat-text">Chat box</span>
+                        <span class="chat-text">The Best talk ..... IS TRASH TALK!</span>
                         <div class="fullChatText"></div>
                     </div>
-                    <div class="messages-box">
-                        <ul>
-
-                        </ul>
+                    <div class="row"><span class="message-box"></span>
                     </div>
                     <div class="card-action">
-                        <div class="input-field col s6 m6 l6">
+                        <div class="input-field col s9 m9 l9">
                             <input placeholder="Enter Thy Taunt Here" id="message-input" type="text" class="validate">
                             <label for="chatText" id="misc-input"></label>
                         </div>
-                        <div class="col s6 m6 l6">
+                        <div class="col s3 m3 l3">
                             <button class="btn waves-effect waves-light grey light-1" type="submit" id="send" name="action">Send
                                 <i class="material-icons right">send</i>
                             </button>
@@ -177,6 +175,20 @@
             </div>
 
         </div>
+        <footer class="page-footer grey darken-1">
+                <div class="container">
+                  <div class="row">
+                    <div class="col l12 m12 s12">
+                      <h5 class="white-text center">Rock Paper Scissors Firebase Project</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="footer-copyright">
+                  <div class="container center">
+                  bradBader
+                  </div>
+                </div>
+              </footer>
 
 
         <!-- Jquery library pull -->
